*LoginView介面重整 *OTP發送添加倒數功能

--- a/Assets/Resources/Language/Language.json
+++ b/Assets/Resources/Language/Language.json
@@ -30,6 +30,11 @@
     "zh_TW": "一次性代碼"
   },
   {
+    "ID": "RESEND",
+    "English": "RESEND",
+    "zh_TW": "重發"
+  },
+  {
     "ID": "SEND CODE",
     "English": "SEND CODE",
     "zh_TW": "傳送代碼"
