*Database 讀/寫/查詢/更新/添加/刪除 *用戶資料即時更新 *使用11碼英文大小寫+數字設置UserID與邀請碼(會檢查產生的是否已使用過) *手機帳號重複登入/註冊 *暱稱設置/重複判斷/已設置暱稱登入不再彈出介面 *頭像更換資料 *line連接/已連接判斷 *錢包註冊/登入   (首次使用錢包登入驗證通過即註冊，    手機註冊相同手機號屬於不同帳號，是不同的UserID等資料) *邀請碼分享/顯示已綁定玩家ID/即時更新綁定資料

--- a/Assets/Resources/Language/Language.json
+++ b/Assets/Resources/Language/Language.json
@@ -5,89 +5,14 @@
     "zh_TW": null
   },
   {
+    "ID": "Asia Poker",
+    "English": "Asia Poker",
+    "zh_TW": "亞洲撲克"
+  },
+  {
     "ID": "Retry",
     "English": "RETRY",
     "zh_TW": "重新嘗試"
-  },
-  {
-    "ID": "Wallet",
-    "English": "Wallet",
-    "zh_TW": "錢包"
-  },
-  {
-    "ID": "Mobile",
-    "English": "Mobile",
-    "zh_TW": "手機"
-  },
-  {
-    "ID": "MobileNumber",
-    "English": "Mobile Number",
-    "zh_TW": "手機號碼"
-  },
-  {
-    "ID": "OTP Code",
-    "English": "OTP Code",
-    "zh_TW": "一次性代碼"
-  },
-  {
-    "ID": "RESEND",
-    "English": "RESEND",
-    "zh_TW": "重發"
-  },
-  {
-    "ID": "SEND CODE",
-    "English": "SEND CODE",
-    "zh_TW": "傳送代碼"
-  },
-  {
-    "ID": "Password",
-    "English": "Password",
-    "zh_TW": "密碼"
-  },
-  {
-    "ID": "Reset Password",
-    "English": "Reset Password",
-    "zh_TW": "重新設密碼"
-  },
-  {
-    "ID": "SIGN IN",
-    "English": "SIGN IN",
-    "zh_TW": "登入"
-  },
-  {
-    "ID": "Sign Up",
-    "English": "Sign Up",
-    "zh_TW": "報名"
-  },
-  {
-    "ID": "REGISTER",
-    "English": "REGISTER",
-    "zh_TW": "註冊"
-  },
-  {
-    "ID": "Lost Password",
-    "English": "Lost Password",
-    "zh_TW": "忘記密碼"
-  },
-  {
-    "ID": "Please Enter Here",
-    "English": "Please Enter Here",
-    "zh_TW": "請在此輸入"
-  },
-  {
-    "ID": "Please Enter The OTP Code",
-    "English": "Please Enter The OTP Code",
-    "zh_TW": "請輸入一次性密碼"
-  },
-  {
-    "ID": "Your Phone Number",
-    "English": "Your Phone Number",
-    "zh_TW": "您的手機號碼"
-  },
-  {
-    "ID": "Remember Me",
-    "English": "Remember Me",
-    "zh_TW": "記住帳號密碼"
   },
   {
     "ID": "SUBMIT",
@@ -168,6 +93,16 @@
     "ID": "At Least 8 Chars.",
     "English": "At Least 8 Chars.",
     "zh_TW": "至少 8 個字元。"
+  },
+  {
+    "ID": "Enter Nickname.",
+    "English": "Enter Nickname.",
+    "zh_TW": "輸入暱稱。"
+  },
+  {
+    "ID": "Less Than 10 Chars.",
+    "English": "Less Than 10 Chars.",
+    "zh_TW": "少於 10 個字元。"
   },
   {
     "ID": "INTEGRAL",
@@ -372,7 +307,7 @@
   {
     "ID": "User Name Entered Incorrectly, Please Try Again.",
     "English": "User Name Entered Incorrectly, Please Try Again.",
-    "zh_TW": "手機號格式錯誤。"
+    "zh_TW": "手機號格式錯誤，請重新輸入"
   },
   {
     "ID": "Invalid Code, Please Try Again.",
@@ -385,9 +320,109 @@
     "zh_TW": "請同意隱私權政策。"
   },
   {
+    "ID": "Mobile Number Has Been Used, Please Try Again.",
+    "English": "Mobile Number Has Been Used, Please Try Again.",
+    "zh_TW": "手機號已使用，請重新輸入。"
+  },
+  {
+    "ID": "Duplicate Nickname, Please Try Again.",
+    "English": "Duplicate Nickname, Please Try Again.",
+    "zh_TW": "暱稱重複，請重新輸入。"
+  },
+  {
+    "ID": "Please Enter A Nickname.",
+    "English": "Please Enter A Nickname.",
+    "zh_TW": "請輸入暱稱。"
+  },
+  {
     "ID": "登入(LoginView)",
     "English": null,
     "zh_TW": null
+  },
+  {
+    "ID": "Sent OTP to SMS",
+    "English": "Sent OTP to SMS",
+    "zh_TW": "已發送 OTP 至簡訊"
+  },
+  {
+    "ID": "Wallet",
+    "English": "Wallet",
+    "zh_TW": "錢包"
+  },
+  {
+    "ID": "Mobile",
+    "English": "Mobile",
+    "zh_TW": "手機"
+  },
+  {
+    "ID": "MobileNumber",
+    "English": "Mobile Number",
+    "zh_TW": "手機號碼"
+  },
+  {
+    "ID": "OTP Code",
+    "English": "OTP Code",
+    "zh_TW": "一次性代碼"
+  },
+  {
+    "ID": "RESEND",
+    "English": "RESEND",
+    "zh_TW": "重發"
+  },
+  {
+    "ID": "SEND CODE",
+    "English": "SEND CODE",
+    "zh_TW": "傳送代碼"
+  },
+  {
+    "ID": "Password",
+    "English": "Password",
+    "zh_TW": "密碼"
+  },
+  {
+    "ID": "Reset Password",
+    "English": "Reset Password",
+    "zh_TW": "重新設密碼"
+  },
+  {
+    "ID": "SIGN IN",
+    "English": "SIGN IN",
+    "zh_TW": "登入"
+  },
+  {
+    "ID": "Sign Up",
+    "English": "Sign Up",
+    "zh_TW": "報名"
+  },
+  {
+    "ID": "REGISTER",
+    "English": "REGISTER",
+    "zh_TW": "註冊"
+  },
+  {
+    "ID": "Lost Password",
+    "English": "Lost Password",
+    "zh_TW": "忘記密碼"
+  },
+  {
+    "ID": "Please Enter Here",
+    "English": "Please Enter Here",
+    "zh_TW": "請在此輸入"
+  },
+  {
+    "ID": "Please Enter The OTP Code",
+    "English": "Please Enter The OTP Code",
+    "zh_TW": "請輸入一次性密碼"
+  },
+  {
+    "ID": "Your Phone Number",
+    "English": "Your Phone Number",
+    "zh_TW": "您的手機號碼"
+  },
+  {
+    "ID": "Remember Me",
+    "English": "Remember Me",
+    "zh_TW": "記住帳號密碼"
   },
   {
     "ID": "錢包連接頁面",
@@ -470,14 +505,29 @@
     "zh_TW": null
   },
   {
+    "ID": "<size=14><color=#FFFFFF>Registration Successful</color></size>\\n<size=12><color=#C6C2C2>Account Successfully Created</color></size>",
+    "English": "<size=14><color=#FFFFFF>Registration Successful</color></size>\\n<size=12><color=#C6C2C2>Account Successfully Created</color></size>",
+    "zh_TW": "<size=14><color=#FFFFFF>註冊成功</color></size>\\n<size=12><color=#C6C2C2>成功建立帳戶</color></size>"
+  },
+  {
+    "ID": "隱私權政策",
+    "English": null,
+    "zh_TW": null
+  },
+  {
     "ID": "Agree To The <color=#79E84B><link=Terms><u>Terms</u></link></color> & <color=#79E84B><link=Privacy Policy><u>Privacy Policy</u></link></color>",
     "English": "Agree To The <color=#79E84B><link=Terms><u>Terms</u></link></color> & <color=#79E84B><link=Privacy Policy><u>Privacy Policy</u></link></color>",
     "zh_TW": "同意 <color=#79E84B><link=Terms><u>條款</u></link></color> & <color=#79E84B><link=Privacy Policy><u>隱私權政策</u></link></color>"
   },
   {
-    "ID": "<size=14><color=#FFFFFF>Registration Successful</color></size>\\n<size=12><color=#C6C2C2>Account Successfully Created</color></size>",
-    "English": "<size=14><color=#FFFFFF>Registration Successful</color></size>\\n<size=12><color=#C6C2C2>Account Successfully Created</color></size>",
-    "zh_TW": "<size=14><color=#FFFFFF>註冊成功</color></size>\\n<size=12><color=#C6C2C2>成功建立帳戶</color></size>"
+    "ID": "Privacy Policy",
+    "English": "Privacy Policy",
+    "zh_TW": "隱私權政策"
+  },
+  {
+    "ID": "Terms",
+    "English": "Terms",
+    "zh_TW": "條款"
   },
   {
     "ID": "設置暱稱",
@@ -700,9 +750,19 @@
     "zh_TW": "尚未連結"
   },
   {
-    "ID": "Invitation code",
-    "English": "Invitation code",
+    "ID": "Invitation Code",
+    "English": "Invitation Code",
     "zh_TW": "邀請碼"
+  },
+  {
+    "ID": "Bound Inviter",
+    "English": "Bound Inviter",
+    "zh_TW": "綁定的邀請者"
+  },
+  {
+    "ID": "Bound",
+    "English": "Bound",
+    "zh_TW": "已綁定"
   },
   {
     "ID": "Share",
