*重複登入判斷 *底池遊戲結算 *倒數結束棄牌 *棄牌判斷 *剩下1名玩家遊戲結算(其他玩家棄牌) *重新遊戲流程

--- a/Assets/Resources/Language/Language.json
+++ b/Assets/Resources/Language/Language.json
@@ -350,6 +350,11 @@
     "zh_TW": "錯誤的邀請碼。"
   },
   {
+    "ID": "Duplicate Login.",
+    "English": "Duplicate Login.",
+    "zh_TW": "帳號已登入。"
+  },
+  {
     "ID": "登入(LoginView)",
     "English": null,
     "zh_TW": null
