邀請碼套皮&Line客服

--- a/Assets/Resources/Language/Language.json
+++ b/Assets/Resources/Language/Language.json
@@ -751,7 +751,7 @@
   },
   {
     "ID": "LINK NOW",
-    "English": "LINK NOW",
+    "English": "Link Now",
     "zh_TW": "立即連結"
   },
   {
@@ -765,9 +765,14 @@
     "zh_TW": "尚未連結"
   },
   {
-    "ID": "Invitation Code",
-    "English": "Invitation Code",
+    "ID": "InviteCode",
+    "English": "INVITE CODE",
     "zh_TW": "邀請碼"
+  },
+  {
+    "ID": "Invite Friends",
+    "English": "Invite Friends",
+    "zh_TW": "邀請朋友"
   },
   {
     "ID": "Bound Inviter",
@@ -793,6 +798,26 @@
     "ID": "Binding Successful",
     "English": "Binding Successful",
     "zh_TW": "綁定成功"
+  },
+  {
+    "ID": "Copy",
+    "English": "Copy",
+    "zh_TW": "複製"
+  },
+  {
+    "ID": "Share QR Code",
+    "English": "Share QR Code!",
+    "zh_TW": "分享QRcode!"
+  },
+  {
+    "ID": "Bring Friends",
+    "English": "Bring Friends, Play Texas Hold'em, Win Rewards!",
+    "zh_TW": "帶上朋友，玩德州撲克，贏取獎勵！"
+  },
+  {
+    "ID": "Please Enter Code",
+    "English": "Please Enter Code",
+    "zh_TW": "請輸入邀請碼"
   },
   {
     "ID": "手牌紀錄",
